# bare_metal_dsp

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bare_metal_dsp/: MainActivity.kt
lib/: dsp_bloc.dart  ffi_bridge.dart  main.dart
src/: CMakeLists.txt  engine.cpp  engine.h
windows/: CMakeLists.txt
windows/flutter/ephemeral/: generated_config.cmake
windows/runner/: Runner.rc  main.cpp
